--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,22 +1,20 @@
 <table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Released</th>
-            <th>Release_year</th>
-            <th>artist_name</th>
-            <th>genre</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @songs.each do |song| %>
-            <tr>
-                <td><%= song.title %></td>
-                <td><%= song.released %></td>
-                <td><%= song.release_year %></td>
-                <td><%= song.artist_name %></td>
-                <td><%= song.genre %></td>
-            </tr>
-        <% end %>
-    </tbody>
-</table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Genre</th>
+      <th>Artist</th>
+      <th>Released Year</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @songs.each do |song| %>
+    <tr>
+      <td><%= song.title %></td>
+      <td><%= song.genre %></td>
+      <td><%= song.artist_name %></td>
+      <td><%= song.release_year %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table> 
